--- a/sass/_icon-font.scss
+++ b/sass/_icon-font.scss
@@ -1,17 +1,17 @@
 @font-face {
-  font-family: 'carepak';
-  src:  url('../fonts/carepak.eot?j7rh7z');
-  src:  url('../fonts/carepak.eot?j7rh7z#iefix') format('embedded-opentype'),
-    url('../fonts/carepak.ttf?j7rh7z') format('truetype'),
-    url('../fonts/carepak.woff?j7rh7z') format('woff'),
-    url('../fonts/carepak.svg?j7rh7z#carepak') format('svg');
+  font-family: 'ars-admin';
+  src:  url('fonts/ars-admin.eot?mskdgk');
+  src:  url('fonts/ars-admin.eot?mskdgk#iefix') format('embedded-opentype'),
+    url('fonts/ars-admin.ttf?mskdgk') format('truetype'),
+    url('fonts/ars-admin.woff?mskdgk') format('woff'),
+    url('fonts/ars-admin.svg?mskdgk#ars-admin') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'carepak' !important;
+  font-family: 'ars-admin' !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -24,25 +24,30 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-promotion:before {
-  content: "\e85a";
-}
-.icon-right-turn:before {
-  content: "\e52e";
-}
-.icon-tooltip-help:before {
-  content: "\e0c6";
-}
-.icon-add-check:before {
-  content: "\e065";
-}
-.icon-manage-types:before {
-  content: "\e161";
-}
-.icon-checkmark:before {
+.icon-user-circle-o:before {
   content: "\e900";
 }
-.icon-receipt:before {
+.icon-comment-alt2-stroke:before {
   content: "\e901";
-  font-size: 18px;
+}
+.icon-comment-alt2-fill:before {
+  content: "\e902";
+}
+.icon-checkmark:before {
+  content: "\e903";
+}
+.icon-check-alt:before {
+  content: "\e904";
+}
+.icon-x:before {
+  content: "\e905";
+}
+.icon-x-altx-alt:before {
+  content: "\e906";
+}
+.icon-plus:before {
+  content: "\e907";
+}
+.icon-plus-alt:before {
+  content: "\e908";
 }
