--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -17,8 +17,8 @@ $link-active: mix(black, $primary, 15%);
 $success: #5cb85c;
 $success-hover: mix(black, $success, 15%);
 
-$warning: #E69500;
-$warning-hover: mix(black, $warning, 15%);
+$ready: #E69500;
+$ready-hover: mix(black, $ready, 15%);
 
 $info: #17a2b8;
 $info-hover: mix(black, $info, 15%);
