--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,10 @@
 //@import '_normalize';
 @import '_defaults';
 @import '_vars';
+@import '_utilities';
 @import '_buttons';
 @import '_custom';
-@import '_custom-sections';
+@import '_account-home';
+@import '_hamburger-menu';
 @import '_custom-modal';
 @import '_icon-font';
