--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,6 +5,7 @@
 @import '_buttons';
 @import '_custom';
 @import '_account-home';
+@import '_order-history';
 @import '_hamburger-menu';
 @import '_custom-modal';
 @import '_icon-font';
