--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -3,7 +3,8 @@
 $wht: white;
 $blk: black;
 $body-bg: #efefef;
-$font-family: 'PT Sans', sans-serif;;
+$font-family: 'OpticSans Light', 'PT Sans', sans-serif;
+$font-color: #333;
 
 $primary: #EE1B22;
 $primary-hover: mix(black, $primary, 15%);
