--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,4 +1,4 @@
-//@import '_normalize';
+
 @import '_defaults';
 @import '_vars';
 @import '_utilities';
@@ -6,6 +6,7 @@
 @import '_custom';
 @import '_account-home';
 @import '_order-history';
+@import '_manage-billing';
 @import '_hamburger-menu';
 @import '_custom-modal';
 @import '_icon-font';
