--- a/css/fonts/style.css
+++ b/css/fonts/style.css
@@ -1,18 +1,10 @@
 @font-face {
-  font-family: 'OpticSans Light';
-  src: url('fonts/OpticSans-101-Light.eot') format('woff');
-  src: url('fonts/OpticSans-101-Light.woff') format('woff');
-}
-
-
-
-@font-face {
   font-family: 'ars-admin';
-  src:  url('fonts/ars-admin.eot?mskdgk');
-  src:  url('fonts/ars-admin.eot?mskdgk#iefix') format('embedded-opentype'),
-    url('fonts/ars-admin.ttf?mskdgk') format('truetype'),
-    url('fonts/ars-admin.woff?mskdgk') format('woff'),
-    url('fonts/ars-admin.svg?mskdgk#ars-admin') format('svg');
+  src:  url('fonts/ars-admin.eot?dfr5mt');
+  src:  url('fonts/ars-admin.eot?dfr5mt#iefix') format('embedded-opentype'),
+    url('fonts/ars-admin.ttf?dfr5mt') format('truetype'),
+    url('fonts/ars-admin.woff?dfr5mt') format('woff'),
+    url('fonts/ars-admin.svg?dfr5mt#ars-admin') format('svg');
   font-weight: normal;
   font-style: normal;
 }
