--- a/sass/_account-home.scss
+++ b/sass/_account-home.scss
@@ -1,11 +1,11 @@
 .account-home {
 
-    padding-bottom: 5   rem;
+    padding-bottom: 5rem;
     
     .head-title {
         border-bottom: 1px solid #999;
         padding-bottom: 2rem;
-        margin: 3rem 0;
+        margin: 3rem 0 0 0;
         text-align: center;
         h2 {
             text-transform: uppercase;
@@ -24,45 +24,123 @@
         @media (max-width: 767px) {
             text-align: center;
         }
+        .product-actions {
+            margin: 0;
+            padding: 0;
+            font-size: 1rem;
+            font-weight: bold;
+            color: $gray-dark;
+            text-transform: uppercase;
+            li {
+                display: inline-block;
+                margin-left: -2px;
+                padding: .5rem;
+                padding-left: 0;
+                @media (max-width: 766px) {
+                    display: block;
+                }
+                a {
+                    text-decoration: none;
+                }
+            }
+        }
+        .cancel {
+            @media (max-width: 767px) {
+                font-weight: bold;
+                background-color: transparent;
+                color: $primary;
+                padding-right: 0;
+                padding-left: 0;
+
+            }
+        }
+        img {
+            width: 100%;
+            max-width: 300px;            
+            @media (max-width: 767px) {
+                max-width: 200px;
+            }
+        }
+        .img-ct { 
+            text-align: center;
+            @media (max-width: 767px) {
+                margin-top: 1rem;
+            }
+        }
         .rt-col-align {
             text-align: right;
             @media (max-width: 767px) {
                 text-align: center;
-            }
-            
+            }   
         }
-        h3 { margin: 0; }
+        h3 { 
+            margin: 1rem 0 2rem 0;
+         }
+         .serial {
+            font-size: 12px;
+            font-weight: bold;
+            font-style: italic;
+            @media (max-width: 767px) {
+                position: absolute;
+                margin: 2rem 0 0 1rem;
+            }
+            &.no-sibling {
+                margin: 0;
+            }
+         }
+         .instructions {
+            color: #336699;
+            font-size: .85rem;
+            font-weight: bold;
+            padding: .5rem;
+            @media (max-width: 767px) {
+                padding: 0;
+            }
+        }
+        .activate-espot {
+            font-size: .75rem;
+            text-align: left;
+            font-weight: bold;
+            @media (max-width: 767px) {
+                margin-top: 1rem;
+                display: block;
+            }
+        }
         .status {
             display: inline-block;
             text-align: center;
             text-transform: uppercase;
             font-size: 13px;
-            &__active {   
+            font-weight: bold;
+            border-radius: 2rem;
+            padding: .2rem 1rem;
+            letter-spacing: 1px;
+            @media (max-width: 767px) {
+                position: absolute;
+                margin-top: -340px;
+                right: 0;
+            }
+            &__active {
                 color: $success;
-                // background-color: mix(white, $success, 10%);
-                // border: 1px solid $success;
-                // border-radius: 2rem;
-                // color: white;
-                // padding: .2rem 0;
-                // display: block;
+                @media (max-width: 767px) {
+                    background-color: mix(white, $success, 10%);
+                    color: white;
+                }
             }
             &__ready {
                 color: $ready;
-                // background-color: mix(white, $ready, 10%);
-                // border: 1px solid $ready;
-                // border-radius: 2rem;
-                // color: white;
-                // padding: .2rem 0;
-                // display: block;
+                @media (max-width: 767px) {
+                    background-color: mix(white, $ready, 10%);
+                    color: white;
+                }
             }
             &__cancelled {
                 color: $primary;
-                // background-color: mix(white, $primary, 10%);
-                // border: 1px solid $primary;
-                // border-radius: 2rem;
-                // color: white;
-                // padding: .2rem 0;
-                // display: block;
+                @media (max-width: 767px) {
+                    color: $primary;
+                    background-color: mix(white, $primary, 10%);
+                    color: white;
+                }
             }
         }
 
@@ -91,7 +169,6 @@
         //             }
         //         }
         //     }
-            
         // }
     }
 }
