--- a/sass/_custom-modal.scss
+++ b/sass/_custom-modal.scss
@@ -22,6 +22,51 @@
     text-align: center;
     z-index: 10;
 }
+
+  .large-modal, .med-modal {
+    box-shadow: 0 0 190px #333;
+    position: fixed;
+    display: none;
+    width: 90%;
+    height: 80%;
+    background-color: white;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    header {
+      position: initial;
+      height: 5rem;
+      background: $wht;
+      border: 0;
+      border-bottom: 3px solid $gray-x-lt;
+      box-shadow: none;
+      width: 100%;
+      margin: 0 auto;
+      padding: 1rem;
+      top: 0;
+      z-index: 1;
+      .logo {
+          float: left;
+          background: url('../img/canon-logo.png') no-repeat;
+          height: 3rem;
+          width: 11rem;
+          display: block;
+          h1 {
+              position: absolute;
+              left: -99999px;
+          }
+      }
+    }
+  }
+
+  .med-modal {
+    width: 50%;
+    @media (max-width: 766px) {
+      width: 90%;
+    }
+  }
+
   .custom-modal {
     padding: 2rem;
     box-shadow: 0 0 190px #333;
@@ -74,7 +119,8 @@
     text-align: center;
     padding: 0;
     font-size: 2rem;
-    line-height: 1.1;
+    font-weight: bold;
+    line-height: 1;
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
@@ -142,10 +188,8 @@ form .error + .error {
 }
 
 
-.button-section, .button-section-foot  {
-  padding-top: .5rem;
+.button-section {
   text-align: right;
-  bottom: 0;
-  right: 0;
   width: 100%;
+  padding: 1rem;
 }
