--- a/sass/_manage-billing.scss
+++ b/sass/_manage-billing.scss
@@ -6,22 +6,22 @@
     width: 100%;
 }
 
-.head-wrapper, footer {
+.head-wrapper {
     display: block;
     width: 100%;
     background-color: white;
-  }
-  .footer {
+}
+.footer {
     position: absolute;
     bottom: 0;
-  }
-  .content-wrapper {
+}
+.content-wrapper {
     width: 100%;
     position: absolute;
     top: 6rem;
     bottom: 4rem;
-  }
-  .content-inner-wrap {
+}
+.content-inner-wrap {
     top: -1rem;
     height: 100%;
     overflow-x: hidden;
@@ -29,7 +29,17 @@
     margin: 0 auto;
     margin-bottom: 3rem;
     position: relative;
-  }
+}
+
+.add-rem-ct {
+    text-align: right;
+    .add-remove {
+        margin-right: 1rem;
+        font-size: 13px;
+        display: inline-block;
+        color: #336699;
+    }
+}
 
 .manage-billing {
 
@@ -50,26 +60,58 @@
             color: $primary;
         }
     }
-
+    
     .current-card {
         font-size: 13px;
         border-bottom: 1px solid #ccc;
         padding-bottom: 1rem;
+        .form-group {
+            margin-bottom: .5rem;
+            label {
+                font-size: 12px;
+                margin-bottom: 0;
+                display: block;
+            }
+            input, select {
+                height: initial;
+                font-size: 12px;
+                padding: 4px 9px;
+                border: 1px solid #999;
+            }
+        }
+        .short-input {
+            width: 7rem;
+            display: inline-block;
+        }
         .credit-icon {
             float: left;
             margin-right: .75rem;
             font-size: 1.75rem !important;
         }
-        span {
-            margin: .35rem .5rem;
+        &__radio {
+            width: 12px;
             display: inline-block;
+            position: relative;
+            top: -12px;
         }
-        .short {
+        &__cc-img {
+            display: inline-block;
+            margin-right: .5rem;
+            img {
+                max-height: 34px;
+            }
+        }
+        .row-mar {
+            margin-bottom: .8rem;
+        }
+        .sm-pad {
+            padding: .2rem;
+        }
+         .short {
             width: 5rem;
             display: inline-block;
             padding: 2px;
-            height: 28px;
-            
+            height: 28px;   
         }
         #done {
             display: none;
@@ -80,18 +122,7 @@
     }
       
     .billing-address {
-       
-        .add-rem-ct {
-            @media (max-width: 767px) {
-                text-align: right;
-            }
-        }
-        .add-remove {
-            margin-right: 1rem;
-            height: 2rem;
-            display: inline-block;
-            
-         }
+        
         .form-group {
             margin-bottom: .5rem;
             label {
@@ -114,10 +145,6 @@
             margin-top: 1.5rem;
             font-size: 11px;
             font-style: italic;
-        }
-        
+        }        
     }
-    
-    
-    
 }
