--- a/sass/_manage-billing.scss
+++ b/sass/_manage-billing.scss
@@ -134,7 +134,8 @@
                 height: initial;
                 font-size: 12px;
                 padding: 4px 9px;
-                border: 1px solid #999;
+               // border: 1px solid #999;
+                border: 1px inset #929292;
             }
         }
         .short-input {
