--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -3,7 +3,7 @@
 $wht: white;
 $blk: black;
 $body-bg: #efefef;
-$font-family: Apex, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif; //Apex,
 $font-color: #333;
 
 $primary: #EE1B22;
