--- a/sass/_account-home.scss
+++ b/sass/_account-home.scss
@@ -27,9 +27,14 @@
         .product-actions {
             margin: 0;
             padding: 0;
-            font-size: .8rem;
             color: $gray-dark;
             text-transform: uppercase;
+            @media (min-width: 922px) {
+                font-size: 1.2rem;
+            }
+            @media (min-width: 768px) and (max-width: 991px) {
+                font-size: .85rem;
+            }
             @media (max-width: 767px) {
                 font-size: 1.2rem;
             }
@@ -98,6 +103,9 @@
             @media (max-width: 767px) {
                 padding: 0;
             }
+            @media (min-width: 768px) and (max-width: 991px) {
+                font-size: 12px;
+            }
         }
         .activate-espot {
             font-size: .75rem;
@@ -116,7 +124,6 @@
             font-weight: bold;
             border-radius: 2rem;
             padding: .2rem 1rem;
-            letter-spacing: 1px;
             @media (max-width: 767px) {
                 position: absolute;
                 margin-top: -320px;
