--- a/sass/_manage-billing.scss
+++ b/sass/_manage-billing.scss
@@ -12,7 +12,7 @@
     background-color: white;
 }
 .footer {
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 .content-wrapper {
@@ -27,14 +27,13 @@
     overflow-x: hidden;
     overflow-y: auto;
     margin: 0 auto;
-    margin-bottom: 3rem;
     position: relative;
 }
 
 .add-rem-ct {
     text-align: right;
     .add-remove {
-        margin-right: 1rem;
+        margin-right: .35rem;
         font-size: 13px;
         display: inline-block;
         color: #336699;
@@ -42,9 +41,10 @@
 }
 
 .manage-billing {
-
+    padding: 0 1rem;
+    
     h3 {
-        margin-bottom: .5rem;
+        margin: 0 0 .5rem 0;
         padding-bottom: .5rem;
         font-weight: bold;
     }
@@ -93,12 +93,18 @@
             display: inline-block;
             position: relative;
             top: -12px;
+            @media (max-width: 766px) {
+                top: -3px;
+              }
         }
         &__cc-img {
             display: inline-block;
             margin-right: .5rem;
             img {
                 max-height: 34px;
+                @media (max-width: 766px) {
+                    max-height: 22px;
+                  }
             }
         }
         .row-mar {
