product row click-ability fix

--- a/sass/_manage-billing.scss
+++ b/sass/_manage-billing.scss
@@ -140,8 +140,7 @@
                 height: initial;
                 font-size: 12px;
                 padding: 4px 9px;
-               // border: 1px solid #999;
-                border: 1px inset #929292;
+                border: 1px solid #999;
             }
         }
         .short-input {
