--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -56,6 +56,9 @@ header {
                                 color: white;
                                 background-color: #666;
                         }
+                        i {
+                            display: none;
+                        }
                     }
                 }
             }
