--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,6 +4,7 @@
 @import '_utilities';
 @import '_buttons';
 @import '_custom';
+@import '_tooltip';
 @import '_account-home';
 @import '_order-history';
 @import '_manage-billing';
