--- a/sass/_order-history.scss
+++ b/sass/_order-history.scss
@@ -26,9 +26,15 @@ $td-font: 11px;
     }
     img {
       width: 100%;
+      max-width: 200px;
+      float: left;
+      @media (max-width: 767px) {
+        max-width: 125px;
+      }
     }
     h3 {
-      margin: 0;
+      
+      margin: 1rem 0 0 0;
       font-weight: bold;
     }
     .serial {
