--- a/sass/_account-home.scss
+++ b/sass/_account-home.scss
@@ -16,35 +16,34 @@
     a {
         text-decoration: underline;
     }
+    .margin-top-sm {
+        margin-top: .5rem;
+    }
 
     .list-item {
         border-bottom: 1px solid #999;
-        margin-top: 3rem;
         padding-bottom: 1rem;
         @media (max-width: 767px) {
             text-align: center;
         }
         .product-actions {
-            margin: 0;
+            margin: 1rem 0 0 0;
             padding: 0;
             color: $gray-dark;
             text-transform: uppercase;
-            @media (min-width: 922px) {
-                font-size: 1.2rem;
-            }
-            @media (min-width: 768px) and (max-width: 991px) {
-                font-size: .85rem;
-            }
-            @media (max-width: 767px) {
-                font-size: 1.2rem;
-            }
+            font-size: 12px;
+            font-weight: bold;
+            
             li {
                 display: inline-block;
-                margin-left: -2px;
+                margin: 0 0 0 -2px;
                 padding: .2rem .3rem;
                 padding-left: 0;
+                width: 33.333%;
+                text-align: center;
                 @media (max-width: 767px) {
                     display: block;
+                    width: 100%;
                 }
                 a {
                     text-decoration: none;
@@ -70,6 +69,7 @@
         }
         .img-ct { 
             text-align: center;
+            min-height: 7rem;
             @media (max-width: 767px) {
                 margin-top: 1rem;
             }
@@ -82,13 +82,15 @@
         }
         h3 { 
             margin: 1rem 0 2rem 0;
+            @media (max-width: 767px) {
+                margin-bottom: 0;
+                font-size: 15px;
+            }
          }
          .serial {
-            font-size: 12px;
-            font-weight: bold;
-            font-style: italic;
+            font-size: 15px;
             @media (max-width: 767px) {
-                position: absolute;
+                // position: absolute;
                 margin: 2rem 0 0 1rem;
             }
             &.no-sibling {
@@ -98,8 +100,10 @@
          .instructions {
             color: #336699;
             font-size: .85rem;
-            font-weight: bold;
+            font-weight: normal;
             padding: .5rem;
+            display: block;
+            margin: .5rem 0 0 0;
             @media (max-width: 767px) {
                 padding: 0;
             }
@@ -110,7 +114,7 @@
         .activate-espot {
             font-size: .75rem;
             text-align: left;
-            font-weight: bold;
+           // font-weight: bold;
             @media (max-width: 767px) {
                 margin-top: 1rem;
                 display: block;
@@ -123,11 +127,12 @@
             font-size: 13px;
             font-weight: bold;
             border-radius: 2rem;
-            padding: .2rem 1rem;
+            margin-top: 1rem;
             @media (max-width: 767px) {
                 position: absolute;
-                margin-top: -320px;
+                margin-top: -210px;
                 right: 0;
+                padding: .2rem 1rem;
             }
             &__active {
                 color: $success;
