--- a/sass/_custom-modal.scss
+++ b/sass/_custom-modal.scss
@@ -1,4 +1,71 @@
 
+.custom-body {
+  margin: 0;
+  background: url('../img/false-header.gif') no-repeat;
+}
+
+.custom-alert {
+  margin: 10px 0;
+}
+.cancel-message {
+  margin-top: 1rem;
+  text-align: center;
+}
+.false-modal {
+  padding: 2rem 0;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  background-color: black;
+  opacity: .65;
+  display: table;
+  @media (max-width: 450px) {
+    padding: 0;
+  }
+
+  &__inner {
+    margin: 0 auto;
+    width: 80%;
+    max-width: 600px;
+    background-color: white;
+    position: absolute;
+    transform: translateX(-50%);
+    top: 3rem;
+    left: 50%;
+    @media (max-width: 767px) {
+      width: 90%;
+      top: 1rem;
+    }
+    @media (max-width: 450px) {
+      width: 100%;
+      top: 0;
+    }
+  }
+  &__header {
+      position: initial;
+      height: 5rem;
+      background: $wht;
+      border: 0;
+      border-bottom: 3px solid $gray-x-lt;
+      box-shadow: none;
+      width: 100%;
+      margin: 0 auto;
+      padding: 1rem;
+        .logo {
+          float: left;
+          background: url('../img/canon-logo.png') no-repeat;
+          height: 3rem;
+          width: 11rem;
+          display: block;
+          h1 {
+              position: absolute;
+              left: -99999px;
+          }
+        }
+    }
+}
+
+
 
 .overlay {
     position: fixed;
@@ -23,7 +90,7 @@
     z-index: 10;
 }
 
-  .large-modal, .med-modal {
+  .large-modal, .med-modal, .tcepps-open-modal {
     box-shadow: 0 0 190px #333;
     position: fixed;
     display: none;
@@ -67,6 +134,11 @@
     @media (max-width: 767px) {
       width: 90%;
     }
+  }
+
+  .tcepps-open-modal {
+    width: 22rem;
+    height: 13rem;
   }
 
   .custom-modal {
