--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -14,6 +14,7 @@ header {
     padding: 1rem;
     top: 0;
     z-index: 1;
+    will-change: top;
     .logo {
         float: left;
         background: url('../img/canon-logo.png') no-repeat;
@@ -47,6 +48,7 @@ header {
                     font-size: 1rem;
                     li {
                         display: block;
+                        color:#ccc;
                         a {
                             padding: .5rem;
                             display: block; 
@@ -86,8 +88,8 @@ header {
                 }
             }
         }
-    }  // End #menu
-}      // End header
+    } // End #menu
+} // End header
 
 footer {
     background: $gray-x-dark;
@@ -98,6 +100,7 @@ footer {
     border: 0;
     padding: .5rem;
     font-size: .75rem;
+    will-change: bottom;
     .foot-content {
       width: 100%;
       margin: 0 auto;
