--- a/sass/_order-history.scss
+++ b/sass/_order-history.scss
@@ -50,12 +50,12 @@ $td-font: 11px;
    .product-row {
       border-bottom: 1px solid #999;
       padding-bottom: 1rem;
-
       a { color: $primary; }
-      p {
-        font-weight: initial;
-      }
-
+      p { font-weight: initial; }
+      @media (min-width: 992px) {
+        min-height: 7rem;
+        margin-bottom: 1rem;
+       }
     &__img {
       width: 4rem;
       height: 4rem;
@@ -66,6 +66,9 @@ $td-font: 11px;
       h1 {
         font-size: 1.2rem;
         font-weight: bold;
+        @media (min-width: 992px) {
+          margin-top: 0;
+         }
       }
     }
     &__more {
@@ -75,12 +78,33 @@ $td-font: 11px;
       font-size: 2rem;
       color: #333;
       text-align: center;
+      @media (min-width: 992px) {
+        display: none;
+       }
+    }
+    .product-target {
+      @media (min-width: 992px) {
+       display: block;
+       width: 23rem;
+       float: left;
+      }
     }
     .product-details {
       margin-left: 5rem;
       font-size: 14px;
+      @media (min-width: 992px) {
+        margin-left: 25rem;
+        display: block;
+        &.collapse {
+          visibility: visible;
+        }
+       }
       p {
         font-weight: initial;
+        @media (min-width: 992px) {
+          float: left;
+          width: 50%;
+        }
       }
     }
 
