--- a/sass/_custom-modal.scss
+++ b/sass/_custom-modal.scss
@@ -32,12 +32,9 @@
     transform: translateX(-50%);
     top: 3rem;
     left: 50%;
-    @media (max-width: 767px) {
-      width: 90%;
-      top: 1rem;
-    }
-    @media (max-width: 450px) {
+    @media (max-width: 668px) {
       width: 100%;
+      height: 665px;
       top: 0;
     }
   }
@@ -90,20 +87,34 @@
     z-index: 10;
 }
 
+// #orderHistoryModal {
+//   @media (max-width: 767px) {
+//     max-width: 30rem;
+//   }
+// }
+
   .large-modal, .med-modal, .tcepps-open-modal {
     box-shadow: 0 0 190px #333;
     position: fixed;
     display: none;
-    width: 90%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     background-color: white;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     z-index: 10;
+    @media (min-width: 668px) and (max-width: 991px) {
+      width: 80%;
+      height: 70%;
+    }
+    @media (min-width: 992px) {
+      width: 70%;
+      height: 80%;
+    }
         
     header {
-      position: initial;
+      position: absolute;
       height: 5rem;
       background: $wht;
       border: 0;
@@ -122,20 +133,14 @@
           width: 11rem;
           display: block;
           h1 {
-              position: absolute;
-              left: -99999px;
+            position: absolute;
+            left: -99999px;
           }
       }
     }
   }
 
-  .med-modal {
-    width: 50%;
-    @media (max-width: 767px) {
-      width: 90%;
-    }
-  }
-
+ 
   .tcepps-open-modal {
     width: 22rem;
     height: 13rem;
@@ -173,8 +178,8 @@
 
   .close-overlay {
     position: absolute;
-    right: -1rem;
-    top:-1rem;
+    right: .7rem;
+    top: 1rem;
     text-align: center;
     padding: 0;
     font-size: 2rem;
@@ -183,12 +188,9 @@
     height: 2.5rem;
     width: 2.5rem;
     border-radius: 50%;
-    background-color: whitesmoke;
-    border: 3px solid $gray-x-dark;
-    color: $gray-x-dark;
+    color: $gray-med-6;
     z-index: 15;
     &:hover {
-      border: 3px solid $primary;
       color: $primary;
       cursor: pointer;
     }
@@ -252,6 +254,9 @@ form .error + .error {
   width: 100%;
   padding: 1rem;
   box-shadow: 0 -15px 30px -16px #999;
+  & .button:first-of-type {
+      margin-right: 1rem;
+  }
 }
 .rem-box {
   box-shadow: none;
