--- a/sass/_hamburger-menu.scss
+++ b/sass/_hamburger-menu.scss
@@ -1,9 +1,8 @@
 
   .mobile-menu-section {
     position: absolute;
-    right: 1rem;
-    top: .5rem;
     height: 3rem;
+    right: 0;
     padding-top: 1rem;
     width: 4rem;
     @media (min-width: 768px) {
@@ -25,7 +24,7 @@
     transform: rotate(0deg);
     transition: all 0.25s cubic-bezier(0.22, 0.61, 0.36, 1);
     opacity: 1;
-    width: 100%; 
+    width: 2rem; 
   }
   span {
     border-radius: 10px;
@@ -36,10 +35,10 @@
   }
   .hamburger span:nth-child(2), 
   .hamburger span:nth-child(3) {
-    top: 18px; 
+    top: 12px; 
   }
   .hamburger span:nth-child(4) {
-    top: 36px; 
+    top: 24px; 
   }
   #btnControl {
     display: none; 
