--- a/sass/_manage-billing.scss
+++ b/sass/_manage-billing.scss
@@ -19,7 +19,7 @@
     width: 100%;
     position: absolute;
     top: 3rem;
-    bottom: 4rem;
+    bottom: 5rem;
     &.top-margin {
         margin-top: 2rem;
     }
@@ -44,7 +44,7 @@
 
 .manage-billing {
     padding: 0 1rem;
-    
+    margin-top: 2rem;
     h3 {
         margin: 0 0 .5rem 0;
         padding-bottom: .5rem;
